@@ -101,6 +101,9 @@
                 <li data-icon="info" data-theme="e" style="display:none">
                   <a href="#" id="patient-anonymized-from">Before anonymization</a>
                 </li>
+                <li data-icon="info" data-theme="e" style="display:none">
+                  <a href="#" id="patient-modified-from">Before modification</a>
+                </li>
                 <li data-icon="gear"><a href="#" id="patient-archive">Download ZIP</a></li>
               </ul>
             </div>
@@ -143,6 +146,9 @@
                 <li data-role="list-divider">Access</li>
                 <li data-icon="info" data-theme="e" style="display:none">
                   <a href="#" id="study-anonymized-from">Before anonymization</a>
+                </li>
+                <li data-icon="info" data-theme="e" style="display:none">
+                  <a href="#" id="study-modified-from">Before modification</a>
                 </li>
                 <li data-icon="gear"><a href="#" id="study-archive">Download ZIP</a></li>
               </ul>
@@ -189,6 +195,9 @@
                 <li data-icon="info" data-theme="e" style="display:none">
                   <a href="#" id="series-anonymized-from">Before anonymization</a>
                 </li>
+                <li data-icon="info" data-theme="e" style="display:none">
+                  <a href="#" id="series-modified-from">Before modification</a>
+                </li>
                 <li data-icon="search"><a href="#" id="series-preview">Preview this series</a></li>
                 <li data-icon="gear"><a href="#" id="series-archive">Download ZIP</a></li>
               </ul>
@@ -231,6 +240,12 @@
 
               <ul data-role="listview" data-inset="true" data-theme="d" data-divider-theme="c">
                 <li data-role="list-divider">Access</li>
+                <li data-icon="info" data-theme="e" style="display:none">
+                  <a href="#" id="instance-anonymized-from">Before anonymization</a>
+                </li>
+                <li data-icon="info" data-theme="e" style="display:none">
+                  <a href="#" id="instance-modified-from">Before modification</a>
+                </li>
                 <li data-icon="arrow-d"><a href="#" id="instance-download-dicom">Download the DICOM file</a></li>
                 <li data-icon="arrow-d"><a href="#" id="instance-download-json">Download the JSON file</a></li>
                 <li data-icon="search"><a href="#" id="instance-preview">Preview the instance</a></li>
